2001-09-13  John Harper  <jsh@pixelslut.com>

	Fixed bug of nautilus desktop window covering panel:

	* sawfish/wm/state/wm-spec.jl (desktop-layer, dock-layer): set
	to -/+ 4 respectively, not -/+ 1(which are the actual values
	used in the GNOME 1 spec)

2001-09-02  John Harper  <jsh@pixelslut.com>

	Fixed 6693 (restarting sawfish with a maximized window and the
	gnome panel will make the maximized window too big):

	* ~/src/sawfish/lisp/sawfish/wm/state/maximize.jl
	(property-notify): don't install check-if-maximizable into the
	add-window-hook immediately. Instead use
	after-initialization-hook to run c-i-m over all windows, then
	install it as before

2001-08-31  John Harper  <jsh@pixelslut.com>

	* ~/src/sawfish/lisp/sawfish/wm/util/stacking.jl
	(maybe-raise-window, maybe-lower-window): when adding server
	timestamp to the client message, subtract one from the actual
	last seen timestamp. Done for same reason as in windows.c

	* ~/src/sawfish/lisp/sawfish/wm/util/display-window.jl
	(display-window-without-focusing): new (private) keyword
	parameter WILL-REFOCUS. Pass this value along to
	select-workspace

	(display-window): pass WILL-REFOCUS as true when we'll be
	focusing a window afterwards (helps avoid some race conditions)

2001-08-24  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/menus.jl: ensure menu-process is nil after being
	killed. Also, never try to kill it unless it's non-nil

2001-08-23  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/commands.jl (no-operation): new command. Fixes
	8463

	* sawfish/wm/state/configure.jl (configure-request-handler):
	don't allow the window to be moved or resized when it's
	maximized. Fixes 8410

	* sawfish/wm/state/maximize.jl (window-locked-vertically-p,
	window-locked-horizontally-p): new functions

	* sawfish/wm/placement.jl (place-window-randomly): removed
	bogus middle cases from from x and y position calculations.
	Fixes 8415

	* sawfish/wm/ext/match-window.jl