@@ -1,3 +1,8 @@
+2001-09-14  John Harper  <jsh@pixelslut.com>
+
+	* sawfish/wm.jl: when possible, disable error reporting on
+	stdio streams
+
 2001-09-13  John Harper  <jsh@pixelslut.com>
 
 	Fixed bug of nautilus desktop window covering panel:
